[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/HumanSprite.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Human.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 14.0

[sub_resource type="Animation" id=2]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Skin1/Skin2/Skin3:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 1.05, 0.95 ), Vector2( 0.95, 1.05 ) ]
}

[node name="Human" type="Node2D"]
script = ExtResource( 2 )

[node name="Skin1" type="Node2D" parent="."]

[node name="Skin2" type="Node2D" parent="Skin1"]

[node name="Skin3" type="Node2D" parent="Skin1/Skin2"]
scale = Vector2( 1.05, 0.95 )

[node name="HumanSprite" parent="Skin1/Skin2/Skin3" instance=ExtResource( 1 )]
frame = 0

[node name="FoodArea" type="Area2D" parent="." groups=[
"humans",
]]
position = Vector2( 0, -8 )
collision_layer = 2
collision_mask = 0

[node name="FoodCollision" type="CollisionShape2D" parent="FoodArea"]
visible = false
shape = SubResource( 1 )

[node name="Players" type="Node2D" parent="."]

[node name="Idle" type="AnimationPlayer" parent="Players"]
autoplay = "Idle"
anims/Idle = SubResource( 2 )
